# wind-curtailment

./: elexon_data_portal.py  main.py  pyproject.toml
lib/: curtailment.py
scripts/: fetch_data.py  polars_vs_pandas_upsampling_experiment.py  try_with_polars.py
